--- a/public/index.html
+++ b/public/index.html
@@ -2,25 +2,60 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" href="%PUBLIC_URL%/img/favicon.png" type="image/x-icon" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta
 			name="description"
-			content="Calculator Web site created As a challenge from Frontend Mentor"
+			content="A simple lightweight in-browser calculator with colorful themes."
 		/>
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+		<link rel="apple-touch-icon" href="%PUBLIC_URL%/img/fb192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
 		<title>Calculator app</title>
+
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+		<meta name="title" content="Calculator | Minimal Web Calc" />
+		<meta
+			name="description"
+			content="A simple lightweight in-browser calculator with colorful themes."
+		/>
+		<meta
+			name="keywords"
+			content="calculator, calc, challenge, frontend, mentor, github, free, amishranpariya, amish, ranpariya, pwa, dark ui, light ui, lightweight, minimal, opensource"
+		/>
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://calculator-amish.netlify.app/" />
+		<meta property="og:title" content="Calculator | Minimal Web Calc" />
+		<meta
+			property="og:description"
+			content="A simple lightweight in-browser calculator with colorful themes."
+		/>
+		<meta
+			property="og:image"
+			content="https://calculator-amish.netlify.app/img/fb512.png"
+		/>
+		<meta property="og:image:type" content="image/png" />
+		<meta property="og:image:width" content="512" />
+		<meta property="og:image:height" content="512" />
+
+		<!-- twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta
+			property="twitter:url"
+			content="https://calculator-amish.netlify.app/"
+		/>
+		<meta property="twitter:title" content="Calculator | Minimal Web Calc" />
+		<meta
+			property="twitter:description"
+			content="A simple lightweight in-browser calculator with colorful themes."
+		/>
+		<meta
+			property="twitter:image"
+			content="https://calculator-amish.netlify.app/img/fb512.png"
+		/>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
